Флексы на главной странице
Также начал уже подгонять маргины и паддинги под макет.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="wrapper">
 
         <div class="header-main-grid-container">
-          <h1 class="header-site-descript">Интернет-магазин строительных материалов и&nbsp;инструментов для ремонта</h1>
+          <h1 class="header-site-descript">Интернет-магазин <br>строительных материалов <br>и&nbsp;инструментов для ремонта</h1>
 
           <div class="header-contact-block">
             <a class="header-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
@@ -72,7 +72,7 @@
 
   <main class="page-content-wrap">
 
-    <section class="page-section">
+    <section class="page-section index-main">
       <div class="wrapper">
 
         <h2 class="visually-hidden">Навигация по разделам сайта</h2>
@@ -161,11 +161,15 @@
                 <a class="card-button buy" href="404.html">Купить</a>
                 <a class="card-button add-favorite" href="404.html">В закладки</a>
               </div>
-              <a href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-9000.jpg" alt="Перфоратор BOSCH BFG 9000" width="184" height="164"></a>
-              <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 9000</h3></a>
-              <div class="product-card-price">
-                <span class="price-last">32500 Р.</span>
-                <span class="price-now">25500 Р.</span>
+              <div class="product-card-previews"> 
+                <a href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-9000.jpg" alt="Перфоратор BOSCH BFG 9000" width="184" height="164"></a>
+              </div>
+              <div class="product-card-info">
+                <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 9000</h3></a>
+                <div class="product-card-price">
+                  <span class="price-last">32500 Р.</span>
+                  <span class="price-now">25500 Р.</span>
+                </div>
               </div>
             </li>
             <li class="product-card">
@@ -173,11 +177,15 @@
                 <a class="card-button buy" href="404.html">Купить</a>
                 <a class="card-button add-favorite" href="404.html">В закладки</a>
               </div>
-              <a href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-3000.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a>
-              <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 3000</h3></a>
-              <div class="product-card-price">
-                <span class="price-last">22500 Р.</span>
-                <span class="price-now">15500 Р.</span>
+              <div class="product-card-previews"> 
+                <a href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-3000.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a>
+              </div>
+              <div class="product-card-info">
+                <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 3000</h3></a>
+                <div class="product-card-price">
+                  <span class="price-last">22500 Р.</span>
+                  <span class="price-now">15500 Р.</span>
+                </div>
               </div>
             </li>
             <li class="product-card">
@@ -185,11 +193,15 @@
                 <a class="card-button buy" href="404.html">Купить</a>
                 <a class="card-button add-favorite" href="404.html">В закладки</a>
               </div>
-              <a href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128"></a>
-              <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 6000</h3></a>
-              <div class="product-card-price">
-                <span class="price-last">30500 Р.</span>
-                <span class="price-now">25500 Р.</span>
+              <div class="product-card-previews">  
+                <a href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128"></a>
+              </div>
+              <div class="product-card-info">
+                <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 6000</h3></a>
+                <div class="product-card-price">
+                  <span class="price-last">30500 Р.</span>
+                  <span class="price-now">25500 Р.</span>
+                </div>
               </div>
             </li>
             <li class="product-card">
@@ -197,10 +209,14 @@
                 <a class="card-button buy" href="404.html">Купить</a>
                 <a class="card-button add-favorite" href="404.html">В закладки</a>
               </div>
-              <a href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-2000.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112"></a>
-              <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 2000</h3></a>
-              <div class="product-card-price">
-                <span class="price-now">12500 Р.</span>
+              <div class="product-card-previews">                
+                <a href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-2000.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112"></a>
+              </div>
+              <div class="product-card-info">
+                <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 2000</h3></a>
+                <div class="product-card-price">
+                  <span class="price-now">12500 Р.</span>
+                </div>
               </div>
             </li>
           </ul>
@@ -210,7 +226,7 @@
         <section class="index-catalog-section">
 
           <div class="catalog-section-header">
-            <h2>Популярные производители:</h2>
+            <h2 class="catalog-section-title">Популярные производители:</h2>
             <a class="button" href="404.html">Все производители</a>
           </div>
 
@@ -232,10 +248,11 @@
     <section class="page-section grey-bg">
       <div class="wrapper">
 
-        <h2 class="page-section-title">Сервисы</h2>
-
-        <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать
-          ваши покупки приятными.</p>
+        <div class="text-content">
+          <h2 class="page-section-title">Сервисы</h2>
+          <p>Хороший интернет-магазин отличается от плохого не только ценами! <br>Мы стараемся изо всех сил, чтобы сделать
+            ваши покупки приятными.</p>
+        </div>
 
         <div class="services-tabs">
 
@@ -248,8 +265,8 @@
           <div class="tabs-content">
             <div id="Delivery" class="tab-item">
               <h3 class="tab-item-title">Доставка</h3>
-              <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо
-                заработаем, поднимая его на ваш этаж!</p>
+              <p>Мы с удовольствием доставим ваш товар прямо <br>к вашему подъезду совершенно бесплатно! <br>Ведь мы неплохо
+                заработаем, <br>поднимая его на ваш этаж!</p>
             </div>
             <div id="Warranty" class="tab-item" style="display: none;">
               <h3 class="tab-item-title">Гарантия</h3>
@@ -275,11 +292,11 @@
 
         <div class="index-about-grid-container">
 
-          <div class="index-about-grid-item">
+          <div class="index-about-company">
             <h3 class="page-section-title">Компания «Техномарт»</h3>
             <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит
               равнодушными любителей сэкономить на гастарбайтерах.</p>
-            <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными
+            <p>Мы можем доставить ваш товар в самые отдаленные точки России! <br>Техномарт работает со многими транспортными
               компаниями:</p>
             <ul class="stylized-list">
               <li class="stylized-list-item">Деловые линии</li>
@@ -289,10 +306,10 @@
             <a class="button about" href="404.html">Подробнее о компании</a>
           </div>
 
-          <div class="index-about-grid-item">
+          <div class="index-about-contact">
             <h3 class="page-section-title">Контакты</h3>
-            <p>Вы можете забрать товар сами, заехав в наш офис:</p>
-            <a href="404.html"><img src="img/content/map.jpg" alt="" width="300" height="158"></a>
+            <p>Вы можете забрать товар сами, <br>заехав в наш офис:</p>
+            <a class="index-map-link" href="404.html"><img src="img/content/map.jpg" alt="" width="300" height="158"></a>
             <a class="button contact-us" href="404.html">Заблудились? Напишите нам!</a>
           </div>
 
@@ -309,14 +326,14 @@
       <div class="wrapper">
         <div class="footer-upper-grid-container">
 
-          <div class="footer-upper-grid-item">
+          <div class="footer-contact-wrap">
             <a class="footer-logo"><img src="img/logo/site-logo.svg" alt="Логотип «Техномарт» красный" width="138" height="23"></a>
             <address>
               <p class="footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br><a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a></p>
             </address>
           </div>
 
-          <div class="footer-upper-grid-item">
+          <div class="footer-nav-wrap">
             <ul class="footer-site-nav">
               <li class="footer-site-nav-item"><a class="footer-site-nav-link" href="404.html">Компания</a></li>
               <li class="footer-site-nav-item"><a class="footer-site-nav-link" href="404.html">Новости</a></li>
