--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           <a class="site-logo"><img src="img/logo/site-logo.svg" alt="Логотип Техномарт" width="108" height="18"></a>
 
           <form class="header-search-form" action="#" method="POST">
+            <input class="header-search-field" type="search" placeholder="Поиск:">
             <button class="search-form-button" type="submit"><span class="visually-hidden">Найти</span></button>
-            <input type="search" placeholder="Поиск:">
           </form>
 
           <div class="shop-navigation-wrap">
@@ -116,7 +116,7 @@
                     <h3 class="promo-slider-title">Перфораторы</h3>
                     <p class="promo-slider-tagline">Настоящие мужские игрушки</p>
                   </div>
-                  <a class="button" href="catalog.html">Открыть каталог</a>
+                  <a class="button promo-slider-item-button" href="catalog.html">Открыть каталог</a>
                 </div>
               </div>
 
@@ -128,7 +128,7 @@
                     <h3 class="promo-slider-title">Дрели</h3>
                     <p class="promo-slider-tagline">Соседям на радость</p>
                   </div>
-                  <a class="button" href="catalog.html">Открыть каталог</a>
+                  <a class="button promo-slider-item-button" href="catalog.html">Открыть каталог</a>
                 </div>
               </div>
 
@@ -162,7 +162,7 @@
                 <a class="card-button add-favorite" href="404.html">В закладки</a>
               </div>
               <div class="product-card-previews"> 
-                <a href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-9000.jpg" alt="Перфоратор BOSCH BFG 9000" width="184" height="164"></a>
+                <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-9000.jpg" alt="Перфоратор BOSCH BFG 9000" width="184" height="164"></a>
               </div>
               <div class="product-card-info">
                 <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 9000</h3></a>
@@ -178,7 +178,7 @@
                 <a class="card-button add-favorite" href="404.html">В закладки</a>
               </div>
               <div class="product-card-previews"> 
-                <a href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-3000.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a>
+                <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-3000.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a>
               </div>
               <div class="product-card-info">
                 <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 3000</h3></a>
@@ -193,8 +193,8 @@
                 <a class="card-button buy" href="404.html">Купить</a>
                 <a class="card-button add-favorite" href="404.html">В закладки</a>
               </div>
-              <div class="product-card-previews">  
-                <a href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128"></a>
+              <div class="product-card-previews"> 
+                <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128"></a>
               </div>
               <div class="product-card-info">
                 <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 6000</h3></a>
@@ -209,8 +209,8 @@
                 <a class="card-button buy" href="404.html">Купить</a>
                 <a class="card-button add-favorite" href="404.html">В закладки</a>
               </div>
-              <div class="product-card-previews">                
-                <a href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-2000.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112"></a>
+              <div class="product-card-previews"> 
+                <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-2000.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112"></a>
               </div>
               <div class="product-card-info">
                 <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 2000</h3></a>
@@ -231,14 +231,14 @@
           </div>
 
           <ul class="index-catalog-list brands">
-            <li class="brand-card"><a href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/bosch.png" alt="Производитель Bosch" width="126" height="37"></a></li>
-            <li class="brand-card"><a href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/makita.png" alt="Производитель Makita" width="123" height="40"></a></li>
-            <li class="brand-card"><a href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/dewalt.png" alt="Производитель DeWalt" width="146" height="44"></a></li>
-            <li class="brand-card"><a href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/interskol.png" alt="Производитель Интерскол" width="200" height="76"></a></li>
-            <li class="brand-card"><a href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/hitachi.png" alt="Производитель Hitachi" width="169" height="31"></a></li>
-            <li class="brand-card"><a href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/lg.png" alt="Производитель LG" width="121" height="73"></a></li>
-            <li class="brand-card"><a href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/aeg.png" alt="Производитель AEG" width="151" height="96"></a></li>
-            <li class="brand-card"><a href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/metabo.png" alt="Производитель Metabo" width="204" height="69"></a></li>
+            <li class="brand-card"><a class="brand-card-link" href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/bosch.png" alt="Производитель Bosch" width="126" height="37"></a></li>
+            <li class="brand-card"><a class="brand-card-link" href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/makita.png" alt="Производитель Makita" width="123" height="40"></a></li>
+            <li class="brand-card"><a class="brand-card-link" href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/dewalt.png" alt="Производитель DeWalt" width="146" height="44"></a></li>
+            <li class="brand-card"><a class="brand-card-link" href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/interskol.png" alt="Производитель Интерскол" width="200" height="76"></a></li>
+            <li class="brand-card"><a class="brand-card-link" href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/hitachi.png" alt="Производитель Hitachi" width="169" height="31"></a></li>
+            <li class="brand-card"><a class="brand-card-link" href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/lg.png" alt="Производитель LG" width="121" height="73"></a></li>
+            <li class="brand-card"><a class="brand-card-link" href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/aeg.png" alt="Производитель AEG" width="151" height="96"></a></li>
+            <li class="brand-card"><a class="brand-card-link" href="404.html"><img class="brand-card-thumb" src="img/catalog/brands/metabo.png" alt="Производитель Metabo" width="204" height="69"></a></li>
           </ul>
 
         </section>
@@ -285,7 +285,7 @@
       </div>
     </section><!-- .page-section -->
 
-    <section class="page-section about">
+    <section class="page-section index-about">
       <div class="wrapper">
 
         <h2 class="visually-hidden">О компании</h2>
@@ -303,7 +303,7 @@
               <li class="stylized-list-item">Автотрейдинг</li>
               <li class="stylized-list-item">ЖелДорЭкспедиция</li>
             </ul>
-            <a class="button about" href="404.html">Подробнее о компании</a>
+            <a class="button index-about-button" href="404.html">Подробнее о компании</a>
           </div>
 
           <div class="index-about-contact">
