--- a/catalog.html
+++ b/catalog.html
@@ -20,8 +20,8 @@
           <a class="site-logo" href="index.html"><img src="img/logo/site-logo.svg" alt="Логотип Техномарт" width="108" height="18"></a>
 
           <form class="header-search-form" action="#" method="POST">
+            <input class="header-search-field" type="search" placeholder="Поиск:">
             <button class="search-form-button" type="submit"><span class="visually-hidden">Найти</span></button>
-            <input type="search" placeholder="Поиск:">
           </form>
 
           <div class="shop-navigation-wrap">
@@ -40,7 +40,7 @@
       <div class="wrapper">
 
         <div class="header-main-grid-container">
-          <p class="header-site-descript">Интернет-магазин строительных материалов и инструментов для ремонта</p>
+          <p class="header-site-descript">Интернет-магазин <br>строительных материалов <br>и&nbsp;инструментов для ремонта</p>
 
           <div class="header-contact-block">
             <a class="header-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
@@ -84,7 +84,7 @@
 
   <main class="page-content-wrap">
 
-    <section class="page-section">
+    <section class="page-section catalog-main">
       <div class="wrapper">
 
       <ul class="breadcrumbs">
@@ -123,11 +123,15 @@
               <a class="card-button buy" href="404.html">Купить</a>
               <a class="card-button add-favorite" href="404.html">В закладки</a>
             </div>
-            <a href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128"></a>
-            <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 6000</h3></a>
-            <div class="product-card-price">
-              <span class="price-last">30500 Р.</span>
-              <span class="price-now">25500 Р.</span>
+            <div class="product-card-previews"> 
+                <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128"></a>
+            </div>
+            <div class="product-card-info">
+              <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 6000</h3></a>
+              <div class="product-card-price">
+                <span class="price-last">30500 Р.</span>
+                <span class="price-now">25500 Р.</span>
+              </div>
             </div>
           </article>
 
@@ -136,11 +140,15 @@
               <a class="card-button buy" href="404.html">Купить</a>
               <a class="card-button add-favorite" href="404.html">В закладки</a>
             </div>
-            <a href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128"></a>
-            <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 6000</h3></a>
-            <div class="product-card-price">
-              <span class="price-last">30500 Р.</span>
-              <span class="price-now">25500 Р.</span>
+            <div class="product-card-previews"> 
+                <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128"></a>
+            </div>
+            <div class="product-card-info">
+              <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 6000</h3></a>
+              <div class="product-card-price">
+                <span class="price-last">30500 Р.</span>
+                <span class="price-now">25500 Р.</span>
+              </div>
             </div>
           </article>
 
@@ -149,11 +157,15 @@
               <a class="card-button buy" href="404.html">Купить</a>
               <a class="card-button add-favorite" href="404.html">В закладки</a>
             </div>
-            <a href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128"></a>
-            <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 6000</h3></a>
-            <div class="product-card-price">
-              <span class="price-last">30500 Р.</span>
-              <span class="price-now">25500 Р.</span>
+            <div class="product-card-previews"> 
+                <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128"></a>
+            </div>
+            <div class="product-card-info">
+              <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 6000</h3></a>
+              <div class="product-card-price">
+                <span class="price-last">30500 Р.</span>
+                <span class="price-now">25500 Р.</span>
+              </div>
             </div>
           </article>
 
@@ -162,11 +174,15 @@
               <a class="card-button buy" href="404.html">Купить</a>
               <a class="card-button add-favorite" href="404.html">В закладки</a>
             </div>
-            <a href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-3000.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a>
-            <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 3000</h3></a>
-            <div class="product-card-price">
-              <span class="price-last">22500 Р.</span>
-              <span class="price-now">15500 Р.</span>
+            <div class="product-card-previews"> 
+                <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-3000.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a>
+            </div>
+            <div class="product-card-info">
+              <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 3000</h3></a>
+              <div class="product-card-price">
+                <span class="price-last">22500 Р.</span>
+                <span class="price-now">15500 Р.</span>
+              </div>
             </div>
           </article>
 
@@ -175,11 +191,15 @@
               <a class="card-button buy" href="404.html">Купить</a>
               <a class="card-button add-favorite" href="404.html">В закладки</a>
             </div>
-            <a href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128"></a>
-            <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 6000</h3></a>
-            <div class="product-card-price">
-              <span class="price-last">30500 Р.</span>
-              <span class="price-now">25500 Р.</span>
+            <div class="product-card-previews"> 
+                <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128"></a>
+            </div>
+            <div class="product-card-info">
+              <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 6000</h3></a>
+              <div class="product-card-price">
+                <span class="price-last">30500 Р.</span>
+                <span class="price-now">25500 Р.</span>
+              </div>
             </div>
           </article>
 
@@ -188,10 +208,14 @@
               <a class="card-button buy" href="404.html">Купить</a>
               <a class="card-button add-favorite" href="404.html">В закладки</a>
             </div>
-            <a href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-2000.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112"></a>
-            <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 2000</h3></a>
-            <div class="product-card-price">
-              <span class="price-now">12500 Р.</span>
+            <div class="product-card-previews"> 
+                <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-2000.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112"></a>
+            </div>
+            <div class="product-card-info">
+              <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 2000</h3></a>
+              <div class="product-card-price">
+                <span class="price-now">12500 Р.</span>
+              </div>
             </div>
           </article>
 
@@ -200,11 +224,15 @@
               <a class="card-button buy" href="404.html">Купить</a>
               <a class="card-button add-favorite" href="404.html">В закладки</a>
             </div>
-            <a href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-3000.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a>
-            <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 3000</h3></a>
-            <div class="product-card-price">
-              <span class="price-last">22500 Р.</span>
-              <span class="price-now">15500 Р.</span>
+            <div class="product-card-previews"> 
+                <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-3000.jpg" alt="Перфоратор BOSCH BFG 3000" width="127" height="112"></a>
+            </div>
+            <div class="product-card-info">
+              <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 3000</h3></a>
+              <div class="product-card-price">
+                <span class="price-last">22500 Р.</span>
+                <span class="price-now">15500 Р.</span>
+              </div>
             </div>
           </article>
 
@@ -213,11 +241,15 @@
               <a class="card-button buy" href="404.html">Купить</a>
               <a class="card-button add-favorite" href="404.html">В закладки</a>
             </div>
-            <a href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128"></a>
-            <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 6000</h3></a>
-            <div class="product-card-price">
-              <span class="price-last">30500 Р.</span>
-              <span class="price-now">25500 Р.</span>
+            <div class="product-card-previews"> 
+                <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-6000.jpg" alt="Перфоратор BOSCH BFG 6000" width="144" height="128"></a>
+            </div>
+            <div class="product-card-info">
+              <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 6000</h3></a>
+              <div class="product-card-price">
+                <span class="price-last">30500 Р.</span>
+                <span class="price-now">25500 Р.</span>
+              </div>
             </div>
           </article>
 
@@ -226,10 +258,14 @@
               <a class="card-button buy" href="404.html">Купить</a>
               <a class="card-button add-favorite" href="404.html">В закладки</a>
             </div>
-            <a href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-2000.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112"></a>
-            <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 2000</h3></a>
-            <div class="product-card-price">
-              <span class="price-now">12500 Р.</span>
+            <div class="product-card-previews"> 
+                <a class="product-card-preview-link" href="404.html"><img class="product-card-thumb" src="img/catalog/products/bosch-bfg-2000.jpg" alt="Перфоратор BOSCH BFG 2000" width="127" height="112"></a>
+            </div>
+            <div class="product-card-info">
+              <a href="404.html"><h3 class="product-card-title">Перфоратор BOSCH BFG 2000</h3></a>
+              <div class="product-card-price">
+                <span class="price-now">12500 Р.</span>
+              </div>
             </div>
           </article>
 
@@ -250,12 +286,13 @@
     <section class="page-section grey-bg">
       <div class="wrapper">
 
-        <h2 class="page-section-title">Пара слов о перфораторах</h2>
-
-        <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче,
-        бетоне и камне. Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять
-        функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном
-        устройстве будут совмещены отбойный молоток и ударная дрель.</p>
+        <div class="text-content">
+          <h2 class="page-section-title">Пара слов о перфораторах</h2>
+          <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче,
+          бетоне и камне. Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять
+          функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном
+          устройстве будут совмещены отбойный молоток и ударная дрель.</p>
+        </div>
 
       </div>
     </section>
@@ -268,14 +305,14 @@
       <div class="wrapper">
         <div class="footer-upper-grid-container">
 
-          <div class="footer-upper-grid-item">
+          <div class="footer-contact-wrap">
             <a class="footer-logo" href="index.html"><img src="img/logo/site-logo.svg" alt="Логотип «Техномарт» красный" width="138" height="23"></a>
             <address>
               <p class="footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br><a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a></p>
             </address>
           </div>
 
-          <div class="footer-upper-grid-item">
+          <div class="footer-nav-wrap">
             <ul class="footer-site-nav">
               <li class="footer-site-nav-item"><a class="footer-site-nav-link" href="404.html">Компания</a></li>
               <li class="footer-site-nav-item"><a class="footer-site-nav-link" href="404.html">Новости</a></li>
