Декоративные элементы внутренняя страница

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
           <a class="site-logo"><img src="img/logo/site-logo.svg" alt="Логотип Техномарт" width="108" height="18"></a>
 
-          <form class="header-search-form" action="#" method="POST">
+          <form class="header-search-form" action="https://echo.htmlacademy.ru" method="GET">
             <input class="header-search-field" type="search" placeholder="Поиск:">
             <button class="search-form-button" type="submit">
               <span class="visually-hidden">Найти</span>
@@ -31,8 +31,8 @@
 
           <div class="shop-navigation-wrap">
             <ul class="shop-menu-list">
-              <li class="shop-menu-item"><a class="shop-menu-link favorites" href="404.html">Закладки: <span class="shop-menu-value">0</span></a></li>
-              <li class="shop-menu-item"><a class="shop-menu-link cart" href="404.html">Корзина: <span class="shop-menu-value">0</span></a></li>
+              <li class="shop-menu-item"><a class="shop-menu-link favorites" href="404.html"><span class="shop-menu-label">Закладки:</span> <span class="shop-menu-value">0</span></a></li>
+              <li class="shop-menu-item"><a class="shop-menu-link cart" href="404.html"><span class="shop-menu-label">Корзина:</span> <span class="shop-menu-value">0</span></a></li>
             </ul>
             <a class="header-make-order" href="404.html">Оформить заказ</a>
           </div>
