--- a/catalog.html
+++ b/catalog.html
@@ -19,15 +19,20 @@
 
           <a class="site-logo" href="index.html"><img src="img/logo/site-logo.svg" alt="Логотип Техномарт" width="108" height="18"></a>
 
-          <form class="header-search-form" action="#" method="POST">
+          <form class="header-search-form" action="https://echo.htmlacademy.ru" method="GET">
             <input class="header-search-field" type="search" placeholder="Поиск:">
-            <button class="search-form-button" type="submit"><span class="visually-hidden">Найти</span></button>
+            <button class="search-form-button" type="submit">
+              <span class="visually-hidden">Найти</span>
+              <svg class="search-form-icon" width="17" height="17" viewBox="0 0 17 17" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M13.458 12.044L17 15.586L15.586 17L12.044 13.458C10.782 14.421 9.21 15 7.5 15C3.35786 15 0 11.6421 0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15.0001 9.14309 14.4581 10.7403 13.458 12.044ZM7.5 2C4.467 2 2 4.467 2 7.5C2.00331 10.5362 4.4638 12.9967 7.5 13C10.532 13 13 10.532 13 7.5C13 4.467 10.532 2 7.5 2Z" />
+              </svg>
+            </button>
           </form>
 
           <div class="shop-navigation-wrap">
             <ul class="shop-menu-list">
-              <li class="shop-menu-item"><a class="shop-menu-link favorites" href="404.html">Закладки: <span>0</span></a></li>
-              <li class="shop-menu-item filled"><a class="shop-menu-link cart" href="404.html">Корзина: <span>10</span></a></li>
+              <li class="shop-menu-item"><a class="shop-menu-link favorites" href="404.html"><span class="shop-menu-label">Закладки:</span> <span class="shop-menu-value">0</span></a></li>
+              <li class="shop-menu-item filled"><a class="shop-menu-link cart" href="404.html"><span class="shop-menu-label">Корзина:</span> <span class="shop-menu-value">10</span></a></li>
             </ul>
             <a class="header-make-order" href="404.html">Оформить заказ</a>
           </div>
@@ -48,8 +53,13 @@
           </div>
 
           <div class="user-logged-wrap">
-            <div class="user-logged-block">
-              <a class="user-logged-name" href="404.html">Равшан Джамшутович</a> 
+            <div class="user-logged-block">              
+              <a class="user-profile-link" href="404.html">
+                <svg class="user-icon" width="20" height="18" viewBox="0 0 20 18" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M17.881 14.166C15.737 13.431 13.625 12.5 12.674 11.776C12.017 11.275 11.904 10.158 12.157 9.361C13.275 8.458 14.021 6.884 14.021 5.083C14.021 2.276 12.221 0 10 0C7.77902 0 5.97901 2.276 5.97901 5.083C5.97901 6.884 6.72501 8.457 7.84201 9.36C8.09501 10.158 7.98302 11.275 7.32502 11.776C6.37502 12.5 4.26201 13.43 2.11801 14.166C-0.0259852 14.902 1.48343e-05 18 1.48343e-05 18H20C20 18 20.025 14.901 17.881 14.166Z"/>
+                </svg>
+                <span class="user-logged-name">Равшан Джамшутович</span>
+              </a> 
               <a href="404.html">
                 <svg class="user-logout-icon" width="20" height="17" viewBox="0 0 20 17" xmlns="http://www.w3.org/2000/svg" fill="currentColor">          
                   <path d="M20 8.5L11.125 0V6H5.125V11H11.125V17L20 8.5Z"/>          
@@ -100,7 +110,71 @@
 
         <section class="catalog-filters">
           <h2 class="catalog-filters-title">Фильтр:</h2>
-          <!-- Здесь будет форма фильтров -->
+
+          <form class="filter-panel" action="https://echo.htmlacademy.ru" method="GET">
+
+            <fieldset class="filter-item">
+              <legend class="filter-item-title">Цена:</legend>
+              <div class="range-price">
+                <div class="range-controls">
+                  <div class="range-scale">
+                    <div class="range-progress" style="width: 87%;"></div>
+                    <div class="range-toggle range-toggle-min" tabindex="0"></div>
+                    <div class="range-toggle range-toggle-max" tabindex="0" style="left: 87%"></div>
+                  </div>                  
+                </div>
+                <div class="price-controls">
+                  <input class="price-value" type="number" name="min-price" max="30000" step="500" value="0">
+                  <span>—</span>
+                  <input class="price-value" type="number" name="max-price" max="30000" step="500" value="30000">
+                </div>
+              </div>
+            </fieldset>
+
+            <fieldset class="filter-item">
+              <legend class="filter-item-title">Производители:</legend>
+              <ul class="filter-options-list">
+                <li class="filter-option filter-brand">
+                  <input class="visually-hidden filter-input-checkbox" type="checkbox" name="bosch" id="filter-bosch" checked>
+                  <label class="filter-option-label" for="filter-bosch">Bosch</label>
+                </li>
+                <li class="filter-option filter-brand">
+                  <input class="visually-hidden filter-input-checkbox" type="checkbox" name="interskol" id="filter-interskol">
+                  <label class="filter-option-label" for="filter-interskol">Интерскол</label>
+                </li>
+                <li class="filter-option filter-brand">
+                  <input class="visually-hidden filter-input-checkbox" type="checkbox" name="makita" id="filter-makita" checked>
+                  <label class="filter-option-label" for="filter-makita">Makita</label>
+                </li>
+                <li class="filter-option filter-brand">
+                  <input class="visually-hidden filter-input-checkbox" type="checkbox" name="dewalt" id="filter-dewalt">
+                  <label class="filter-option-label" for="filter-dewalt">Dewalt</label>
+                </li>
+                <li class="filter-option filter-brand">
+                  <input class="visually-hidden filter-input-checkbox" type="checkbox" name="hitachi" id="filter-hitachi">
+                  <label class="filter-option-label" for="filter-hitachi">Hitachi</label>
+                </li>
+              </ul>
+            </fieldset>
+
+            <fieldset class="filter-item">
+              <legend class="filter-item-title">Питание:</legend>
+              <ul class="filter-options-list">
+                <li class="filter-option filter-power">
+                  <input class="visually-hidden filter-input-radio" type="radio" name="power-type" value="battery" id="filter-battery" checked>
+                  <label class="filter-option-label" for="filter-battery">Аккумуляторные</label>
+                </li>
+                <li class="filter-option filter-power">
+                  <input class="visually-hidden filter-input-radio" type="radio" name="power-type" value="ac-power" id="filter-ac">
+                  <label class="filter-option-label" for="filter-ac">Сетевые</label>
+                </li>
+              </ul>
+            </fieldset>
+
+            <button type="submit" class="filter-submit">Показать</button>
+            
+          </form>
+
         </section>
 
         <section class="catalog-sorter">
@@ -111,8 +185,18 @@
             <a class="catalog-sort-link-item" href="catalog?sort=function">По функционалу</a>
           </div>
           <div class="catalog-order-nav">
-            <a class="catalog-order-nav-item" href="catalog?order=ASC"><span class="visually-hidden">По возрастанию</span></a>
-            <a class="catalog-order-nav-item desc" href="catalog?order=DESC"><span class="visually-hidden">По убыванию</span></a>
+            <a class="catalog-order-nav-item" href="catalog?order=ASC">
+              <svg class="order-nav-icon" width="12" height="10" viewBox="0 0 12 10" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path d="M5.66241 0L11.1624 10L0.162415 10"/>
+              </svg>
+              <span class="visually-hidden">По возрастанию</span>
+            </a>
+            <a class="catalog-order-nav-item desc" href="catalog?order=DESC">
+              <svg class="order-nav-icon" width="12" height="10" viewBox="0 0 12 10" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path d="M5.66241 10L0.162415 0H11.1624"/>
+              </svg>              
+              <span class="visually-hidden">По убыванию</span>
+            </a>
           </div>
         </section>
 
@@ -152,7 +236,7 @@
             </div>
           </article>
 
-          <article class="product-card">
+          <article class="product-card new">
             <div class="product-card-buttons">
               <a class="card-button buy" href="404.html">Купить</a>
               <a class="card-button add-favorite" href="404.html">В закладки</a>
@@ -169,7 +253,7 @@
             </div>
           </article>
 
-          <article class="product-card">
+          <article class="product-card new">
             <div class="product-card-buttons">
               <a class="card-button buy" href="404.html">Купить</a>
               <a class="card-button add-favorite" href="404.html">В закладки</a>
@@ -203,7 +287,7 @@
             </div>
           </article>
 
-          <article class="product-card">
+          <article class="product-card new">
             <div class="product-card-buttons">
               <a class="card-button buy" href="404.html">Купить</a>
               <a class="card-button add-favorite" href="404.html">В закладки</a>
@@ -219,7 +303,7 @@
             </div>
           </article>
 
-          <article class="product-card">
+          <article class="product-card new">
             <div class="product-card-buttons">
               <a class="card-button buy" href="404.html">Купить</a>
               <a class="card-button add-favorite" href="404.html">В закладки</a>
@@ -253,7 +337,7 @@
             </div>
           </article>
 
-          <article class="product-card">
+          <article class="product-card new">
             <div class="product-card-buttons">
               <a class="card-button buy" href="404.html">Купить</a>
               <a class="card-button add-favorite" href="404.html">В закладки</a>
@@ -289,8 +373,8 @@
         <div class="text-content">
           <h2 class="page-section-title">Пара слов о перфораторах</h2>
           <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче,
-          бетоне и камне. Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять
-          функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном
+          бетоне и камне. <br>Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять
+          функции дрели, шуруповерта и отбойного молотка. В&nbsp;ассортиментном ряду есть выбор «трехрежимников»: в одном
           устройстве будут совмещены отбойный молоток и ударная дрель.</p>
         </div>
 
