--- a/index.html
+++ b/index.html
@@ -453,5 +453,7 @@
     <button class="modal-close" type="button" aria-label="Закрыть"></button>
   </section>
 
+  <script type="text/javascript" src="js/scripts.js"></script>
+
 </body>
 </html>
